(-) Option to choose the side of checkbox and radio buttons removed as not supported by Bootstrap

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -1151,19 +1151,21 @@ input[type='radio'] {
 .SobiPro .spFieldRadio,
 .SobiPro .spFieldCheckbox {
 	float: left;
+	min-height: 30px;
 }
 .SobiPro .spFieldRadio label,
 .SobiPro .spFieldCheckbox label {
 	color: #666666;
-	float: left;
-	margin-top: 5px;
+//	float: left;
+//	margin-top: 5px;
 }
 .SobiPro .spFieldRadio input,
 .SobiPro .spFieldCheckbox input {
-	margin-top: 9px;
+//	margin-top: 9px;
+	margin-top: 1px;
 	margin-left: 5px;
 	margin-right: 5px;
-	float: left;
+//	float: left;
 }
 // File Upload
 .SobiPro .spFileUpload {
@@ -1204,9 +1206,10 @@ input[type='radio'] {
 		margin-top: 5px;
 	}
 }
-.spFieldDNPermission input[type='checkbox'] {
-	margin-top: 6px;
-}
+//.SobiPro .spFieldDNPermission input[type='checkbox'] {
+//	margin-top: 6px;
+//}
+
 // Image Field
 .SobiPro .spImageUpload {
 	.progress-message {
