(#) No image type selectable for image field in category view

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -639,6 +639,15 @@ body.modal-open {
 	.table.table-vstriped > thead > tr > th {
 		border-bottom: none;
 	}
+	.table td a {
+		color: @base-color;
+	}
+	.table td a.active,
+	.table td a:hover,
+	.table td a:focus {
+		color: @base-color;
+		text-decoration: underline;
+	}
 
 	// Panels
 	// ------------------------
