Checkboxes aligned (b3-default3 template)

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -1734,10 +1734,12 @@ body.modal-open {
 		}
 	}
 	.spImageField input[type='checkbox'] {
-		margin: 1px 5px 5px 0;
+//		margin: 1px 5px 5px 0;
+		margin: 4px 5px 5px -20px;
 	}
 	.spImageField label {
 		display: inline-block;
+		padding-left: 20px;
 	}
 	.spImageUpload {
 		.span1 {
