(#) Redefine standard Bootstrap alert-link colours (b3-default3 only)

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -18,9 +18,9 @@
 
 @background: #ffffff;
 @font: #333;
-@font-a: #0000b3;
-@font-a-hover: #00007b;
-@font-sobipro: #993333;
+@font-a: #000099;
+@font-a-hover: #000066;
+@font-sobipro: #b83d3d;
 @font-size: 14px;
 @font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 @admIcons: '../../../../media/sobipro/adm';
@@ -556,6 +556,11 @@ input[type='radio'] {
 	.SpCellCenterSmall {
 		text-align: center;
 		max-width: 100px;
+		width: 100px;
+
+		input[type="checkbox"] {
+			vertical-align: baseline;
+		}
 	}
 
 	.SpCellLeft {
