--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -1104,6 +1104,20 @@ body.modal-open {
 		color: @active-color;
 	}
 
+	//Redefine standard Bootstrap alert-link colours
+	.alert-info	.alert-link {
+		color: #245269;
+	}
+	.alert-danger .alert-link {
+		color: #843534;
+	}
+	.alert-success .alert-link {
+		color: #2b542c;
+	}
+	.alert-warning .alert-link {
+		color: #66512c;
+	}
+
 	// define bootstrap alert to use it as mixin
 	.alert {
 		padding: 8px 15px 8px 14px;
