(+) New field 'Button' supplement

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -1133,16 +1133,10 @@ input[type='radio'] {
 // Edit entries
 // -------------------------
 // Url and Email field
-.SobiPro .spFieldUrlLabel label,
-.SobiPro .spFieldEmailLabel label,
-.SobiPro .spFieldEmail label {
-	//	color: #666666;
-	//	margin-top: 7px;
-	//	float: none;
-}
 .SobiPro .spFieldEmailLabel {
 	margin-bottom: 5px;
 }
+.SobiPro .spFieldButton,
 .SobiPro .spFieldUrl {
 	display: block;
 	margin-top: 5px;
@@ -1152,6 +1146,10 @@ input[type='radio'] {
 		float: left;
 	}
 }
+.SobiPro .spCountableReset {
+	margin-top: 5px;
+}
+
 // Checkboxes and Radio Buttons
 .SobiPro .spFieldRadio,
 .SobiPro .spFieldCheckbox {
