--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -237,7 +237,7 @@
 	color: @active-color;
 }
 .alert-message {
-	margin-bottom: 0;
+//	margin-bottom: 0;
 }
 // Calendar/Datepicker
 // ----------------------------------------
@@ -785,12 +785,12 @@
 	}
 
 	// has to be defined by the template as several apps are using it
-	.alert-message {
-		border-style: solid;
-		border-width: 1px;
-		.alert;
-		.spAlert;
-	}
+	//.alert-message {
+	//	border-style: solid;
+	//	border-width: 1px;
+	//	.alert;
+	//	.spAlert;
+	//}
 
 	.spMessage {
 		margin-top: 10px;
