(#) Missing distance for dependency list in entry form

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -1750,6 +1750,7 @@ body.modal-open {
 	}
 	// URL and Email Fields
 	// ----------------------------------------
+	.spFieldSelect select,
 	.spFieldButtonLabel,
 	.spFieldEmailLabel,
 	.spFieldUrlLabel {
