--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -1282,6 +1282,7 @@
 
 	// URL and Email Fields
 	// ----------------------------------------
+	.spFieldSelect select,
 	.spFieldUrlButton,
 	.spFieldEmailLabel,
 	.spFieldUrlLabel {
