small template corrections

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2436,6 +2436,11 @@ body.modal-open {
 		.nav-pills > li + li {
 			margin-left: 0;
 		}
+		.form-horizontal .control-label {
+			float: none;
+			width: 100%;
+			text-align: left;
+		}
 	}
 	// form switch to label above input
 	@media (max-width: 599px) {
