--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -2012,6 +2012,11 @@
 		.spUpload .btn-group {
 			width: 100%;
 		}
+		.form-horizontal .control-label {
+			float: none;
+			width: 100%;
+			text-align: left;
+		}
 	}
 
 	// Landscape phones and down
