small design changes

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -200,6 +200,9 @@ input[type='radio'] {
 		//font-size: 0;
 		white-space: normal;
 	}
+	.btn-group.open .dropdown-toggle {
+		box-shadow: none;
+	}
 	.label {
 		padding: 3px 5px 2px;
 	}
@@ -295,40 +298,8 @@ input[type='radio'] {
 // Toolbar
 .SobiPro .breadcrumb {
 	padding: 7px 14px;
-	//margin: 0 0 18px;
-	//background-color: #FBFBFB;
-	//background-image: -moz-linear-gradient(top, white, whiteSmoke);
-	//background-image: -ms-linear-gradient(top, white, whiteSmoke);
-	//background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(whiteSmoke));
-	//background-image: -webkit-linear-gradient(top, white, whiteSmoke);
-	//background-image: -o-linear-gradient(top, white, whiteSmoke);
-	//background-image: linear-gradient(top, white, whiteSmoke);
-	//background-repeat: repeat-x;
 	border: 1px solid #ddd;
 	border-radius: 2px;
-	//-webkit-border-radius: 3px;
-	//-moz-border-radius: 3px;
-	//border-radius: 6px;
-	//-webkit-box-shadow: inset 0 1px 0 white;
-	//-moz-box-shadow: inset 0 1px 0 #ffffff;
-	//box-shadow: inset 0 1px 0 white;
-	.btn-group {
-		//float: left;
-	}
-	.divider {
-		//	padding: 0 5px;
-		//	color: #999;
-		//	float: left;
-		//	display: block;
-		//	margin: 0.2pt;
-	}
-	li {
-		//	display: inline-block;
-	}
-	.btn {
-		//	float: left;
-		//	padding-left: 10px;
-	}
 	i {
 		font-size: 110%;
 	}
@@ -360,6 +331,7 @@ input[type='radio'] {
 	.nav .dropdown-toggle .caret {
 		border-bottom-color: @font-sobipro;
 		border-top-color: @font-sobipro;
+		margin-top: 8px;
 	}
 	.nav-tabs .open .dropdown-toggle,
 	.nav-pills .open .dropdown-toggle,
@@ -372,16 +344,6 @@ input[type='radio'] {
 	.dropdown-submenu:hover a {
 		color: #ffffff;
 		background-color: #890000;
-		//background-image: -moz-linear-gradient(top, #a90000, #890000);
-		//background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a90000), to(#890000));
-		//background-image: -webkit-linear-gradient(top, #a90000, #890000);
-		//background-image: -o-linear-gradient(top, #a90000, #890000);
-		//background-image: linear-gradient(to bottom, #a90000, #890000);
-		//background-repeat: repeat-x;
-		//filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
-		//border-color: #a90000 #a90000 #890000;
-		//border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-		//text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 	}
 	.SpDropDownBt li {
 		min-width: 160px;
