(!) Improvement of search form (b3-default3) on mobile

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -1913,6 +1913,10 @@ body.modal-open {
 	.spSearch .highlight {
 		background-color: yellow;
 	}
+	.sp-search-controls input {
+		margin-bottom: 10px;
+	}
+
 
 	// Payment popup
 	// ----------------------------------------
@@ -2514,13 +2518,14 @@ body.modal-open {
 		.sp-search-controls .btn {
 			width: 100%;
 		}
-
 		.spSelectRangeFrom .input-group,
 		.spSelectRangeTo .input-group {
 			margin: 0 10px 10px 0;
 			width: 100%;
 		}
-
+		.sp-search-controls .btn {
+			margin-bottom: 6px;
+		}
 		.sp-search-phrases .btn {
 			width: calc(100% / 3);
 			font-size: calc(@fontsize - 1px);
