Review status color added to default templates

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2161,6 +2161,9 @@ body.modal-open {
 		.summary-criteria-value {
 			font-size: @fontsize;
 		}
+		.review-status i {
+			color: @important-color;
+		}
 	}
 
 	// Calendar Field
