--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -1714,6 +1714,9 @@
 		.summary-criteria-value {
 			font-size: @fontsize;
 		}
+		.review-status i {
+			color: @important-color;
+		}
 	}
 
 	// Calendar Field
