(!) Styles for version comparison screen improved

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -1248,8 +1248,17 @@
 	}
 
 	.Differences.DifferencesSideBySide {
+		width: 100%;
+
+		thead > tr > th {
+			padding-bottom: 15px;
+		}
 		.Left {
 			width: 48%;
+			vertical-align: top;
+		}
+		.Right {
+			vertical-align: top;
 		}
 	}
 
