Category fields layout improvement

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -419,6 +419,9 @@
 		td {
 			vertical-align: middle;
 		}
+		.spWidth5pp {
+			width: 5%;
+		}
 
 		.SpCellHeader {
 			padding-top: 25px;
@@ -447,10 +450,10 @@
 				color: #3b5e78;
 			}
 			.icon-gift {
-				color: #b42217;
+				color: #3a9613;
 			}
 			.icon-dollar {
-				color: #3a9613;
+				color: #b42217;
 			}
 			.icon-stop {
 				color: orange;
@@ -461,7 +464,6 @@
 			}
 			.icon-remove-sign {
 				color: @font-sobipro;
-				//font-size: 124%;
 			}
 
 			a.checkedout .icon-lock {
@@ -474,7 +476,6 @@
 			input[type="checkbox"] {
 				margin-top: 0;
 			}
-
 			.btn.filter-edit {
 				padding: 2px 12px;
 				i {
@@ -487,7 +488,6 @@
 		.spPositionCol {
 			padding: 3px;
 		}
-
 		.SpCellCenterSmall {
 			text-align: center;
 			max-width: 100px;
@@ -497,7 +497,6 @@
 				vertical-align: baseline;
 			}
 		}
-
 		.SpCellLeft {
 			text-align: left;
 		}
