--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -4,7 +4,7 @@
 /* Authors: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH */
 /* Url: https://www.Sigsiu.NET */
 /**/
-/* @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved. */
+/* @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved. */
 /* @license GNU/GPL Version 3 */
 /* This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 */
 /* as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3. */
@@ -1968,6 +1968,10 @@ body.modal-open {
 	}
 
 	.sp-search-controls input {
+		margin-bottom: 10px;
+	}
+
+	.spSearchBottom {
 		margin-bottom: 10px;
 	}
 
